--- a/src/Education.Api/Education.Api.csproj
+++ b/src/Education.Api/Education.Api.csproj
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Education.Infrastructure\Education.Infrastructure.csproj" />
-    <ProjectReference Include="..\..\EducationApplication\EducationApplication.csproj" />
+    <ProjectReference Include="..\Education.Application\Education.Application.csproj" />
+    <ProjectReference Include="..\Education.Infrastructure\Education.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
