--- a/src/Education.Api/appsettings.json
+++ b/src/Education.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EducationDbConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=5755dazai;Database=EducationDb"
+    "EducationDbConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=coder;Database=EducationDb"
   }
 }
