--- a/src/Education.Application/Education.Application.csproj
+++ b/src/Education.Application/Education.Application.csproj
@@ -16,4 +16,11 @@
     <ProjectReference Include="..\Education.Domain\Education.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\UserCases\Commands\" />
+    <Folder Include="UseCases\UserCases\Handlers\CommandHandler\" />
+    <Folder Include="UseCases\UserCases\Handlers\QueryHandler\" />
+    <Folder Include="UseCases\UserCases\Queries\" />
+  </ItemGroup>
+
 </Project>
