User cases done

--- a/src/Education.Application/Education.Application.csproj
+++ b/src/Education.Application/Education.Application.csproj
@@ -14,13 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Education.Domain\Education.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="UseCases\UserCases\Commands\" />
-    <Folder Include="UseCases\UserCases\Handlers\CommandHandler\" />
-    <Folder Include="UseCases\UserCases\Handlers\QueryHandler\" />
-    <Folder Include="UseCases\UserCases\Queries\" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
