--- a/src/Education.Application/Education.Application.csproj
+++ b/src/Education.Application/Education.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="UseCases\CategoryCase\**" />
+    <EmbeddedResource Remove="UseCases\CategoryCase\**" />
+    <None Remove="UseCases\CategoryCase\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
@@ -18,9 +24,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\CategoryCase\Commands\" />
-    <Folder Include="UseCases\CategoryCase\Handlers\" />
-    <Folder Include="UseCases\CategoryCase\Queries\" />
     
 	  <Folder Include="UseCases\UserCase\Queries\" />
     <Folder Include="UseCases\UserCases\Commands\" />
