--- a/src/Education.Api/appsettings.json
+++ b/src/Education.Api/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EducationDbConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=coder;Database=EducationDb"
+    "EducationDbConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=coder;Database=EducationDb;"
+  },
+  "JWTSettings": {
+    "ValidAudence": "https://localhost:4200/",
+    "ValidIssuer": "https://localhost:7026/",
+    "Secret": "dcfvgbftedascvbgfhgtrefwdsdcgfbtefdwsdcf",
+    "Expire": "1"
   }
 }
