--- a/src/Education.Application/Education.Application.csproj
+++ b/src/Education.Application/Education.Application.csproj
@@ -29,6 +29,10 @@
     <Folder Include="UseCases\UserCases\Commands\" />
     <Folder Include="UseCases\UserCases\Handlers\CommandHandler\" />
     <Folder Include="UseCases\UserCases\Handlers\QueryHandler\" />
+    <Folder Include="UseCases\WishListCases\Commands\" />
+    <Folder Include="UseCases\WishListCases\Handlers\CommandHandlers\" />
+    <Folder Include="UseCases\WishListCases\Handlers\QueryHandlers\" />
+    <Folder Include="UseCases\WishListCases\Queries\" />
   </ItemGroup>
 
 </Project>
