--- a/src/Education.Api/appsettings.json
+++ b/src/Education.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EducationDbConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=coder;Database=EducationDb;"
+    "EducationDbConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=coder;Database=EducationDbbb;"
   },
   "JWTSettings": {
     "ValidAudence": "https://localhost:4200/",
